# tesl

./: .gitignore  AGENTS.md  EXECUTIVE-REVIEW-2026-07.md  INSTALL.md  LANGUAGE-SPEC.md  LICENSE  Makefile  README.md  TECHNICAL-REVIEW-2026-07.md  TESL.md  ci.sh  compile-examples.sh  critical-review-64.md  critical_report.md  critical_report002.md  flake.nix  shell.nix  taken_decision.md
compiler/: build.sh  ci.sh  dune-project
compiler/lib/: ast.ml  ast_visitor.ml  checker.ml  compile.ml  config_schema.ml  currencies.ml  desugar.ml  diag_fix.ml  dune  embedded_docs.ml  emit_elm.ml  emit_racket.ml  emit_ts.ml  error_codes.ml  float_fmt.ml  formatter.ml  import_suggest.ml  ir.ml  lexer.mll  linter.ml  location.cmi  location.cmo  location.ml  mutate.ml  parser.ml  proof_checker.ml  proof_discharge.ml  proof_kernel.ml  proof_kernel.mli  source_map.ml  stdlib_config_names.ml  token.ml  type_system.ml  tz_zones.ml  units_catalog.ml  validation.ml  validation.mli  validation_advanced.ml  validation_capabilities.ml  validation_common.ml  (+4 more)
dev-docs/: 01-overview.md  02-parser.md  03-module-system.md  04-body-compiler.md  05-adding-stdlib-function.md  06-gdp-runtime.md  07-sql-layer.md  08-queue-pubsub.md  09-adding-tests.md  10-common-patterns.md  11-frontend-ir.md  README.md  deploy.md  tesl-manifest.md  zero-cost-proofs-contract.md
dsl/: capability.rkt  check.rkt  load-test.rkt  metrics.rkt  otel.rkt  sql.rkt  test-support.rkt  trusted.rkt  types.rkt  web.rkt
editor/: README.md  protocol.md
example/: admin-task-api.rkt  admin-task-api.tesl  ai-conversation-service.rkt  ai-conversation-service.tesl  ai-live-check.tesl  bookmark-api.rkt  debug-test.tesl  document-api.rkt  int32-boundary.rkt  int32-boundary.tesl  queue-api.rkt  queue-api.tesl  sandbox.rkt  sandbox.tesl  sandbox2.rkt  sandbox2.tesl  sandbox2.test.rkt  sandbox2.test.tesl  sandbox3.rkt  sandbox3.tesl  support-assistant.rkt  support-assistant.tesl  todo-api.rkt  todo-api.tesl  user-service-api.rkt  user-service-api.tesl
lang/: reader.rkt
manual/: FAQ.md  GETTING-STARTED.md  MANUAL.md  agent-handoffs.md  ai-testing.md  anchors.md  best-practices.md  deploy.md  examples.md  index.md  overview.md  tesl-manifest.md  tour.md
nix/: tesl-cli-body.sh
scripts/: bootstrap-tesl-lang.sh  differential-proofs.sh  gen-currencies.py  gen-stdlib-rkt.sh  gen-tz-zones.py  gen_embedded_docs.ml  postgres-init.sh  postgres-start.sh  postgres-stop.sh  tesl-manifest.sh
templates/: README.md
tesl/: agent-provider.rkt  agent.rkt  api-test.rkt  cache.rkt  cli.rkt  db.rkt  dict.rkt  either-derived.rkt  either-prim.rkt  either.rkt  either.tesl  email.rkt  env.rkt  float.rkt  http-client.rkt  http.rkt  human-actions.rkt  id.rkt  int.rkt  int32.rkt  jwt.rkt  list-derived.rkt  list-prim.rkt  list-prim.tesl  list.rkt  list.tesl  logging.rkt  maybe.rkt  money.rkt  prelude.rkt  queue.rkt  random.rkt  result.rkt  server-tools.rkt  set.rkt  sse.rkt  string.rkt  telemetry.rkt  time.rkt  tuple.rkt  (+2 more)
tests/: adversarial-review-tests.rkt  adversarial-review-tests.tesl  agent-conversation-pg-test.rkt  agent-conversation-tests.rkt  agent-conversation-tests.tesl  agent-feature-tests.rkt  agent-feature-tests.tesl  agent-money-tools-tests.rkt  agent-provider-norm-test.rkt  agent-run-tests.rkt  agent-run-tests.tesl  agent-runtime-tests.rkt  agent-tests.rkt  agent-tests.tesl  agent-tools-tests.rkt  agent-tools-tests.tesl  all.rkt  (+127 more)
(+712 files in other folders)
