(library
 (name tesl_compiler_lib)
 (wrapped false)
 ; -warn-error +8: a non-exhaustive pattern match (warning 8) is a COMPILE
 ; ERROR across the whole compiler, not just the two soundness modules that
 ; previously opted in with [@@@ocaml.warning "@8"].  A match that forgets a
 ; constructor now fails the build instead of silently falling through — the
 ; fail-closed discipline the proof/validation passes depend on.
 (ocamlopt_flags (:standard -w -50 -warn-error +8))
 (ocamlc_flags (:standard -w -50 -warn-error +8))
 (modules tz_zones currencies units_catalog formatter linter ast ast_visitor proof_kernel desugar checker compile diag_fix emit_racket emit_ts emit_elm error_codes float_fmt import_suggest ir lexer location mutate parser proof_checker proof_discharge source_map token type_system validation_common validation_structural validation_sql_codec validation_proof validation_names validation_capabilities validation_advanced validation embedded_docs)
 ; unix: wall-clock timestamps for opt-in per-phase timing (TESL_PHASE_TIMING)
 ;       in compile.ml.  unix ships with the OCaml distribution.
 (libraries str unix))

(ocamllex
 (modules lexer))

; Bake all manual and example files into the binary at build time.
; (deps (universe)) tells dune the rule always needs re-running (the source
; files it reads are outside the dune project root so cannot be listed as
; explicit deps).  Dune still compares content hashes before recompiling
; downstream modules, so OCaml compilation only triggers when docs actually
; change.  (mode promote) writes the result back to the source tree so
; `git diff` shows when the embedded snapshot has drifted.
(rule
 (target embedded_docs.ml)
 (mode promote)
 (deps (universe))
 (action
  (with-stdout-to %{target}
   (run %{exe:../gen/gen_docs.exe}))))
